--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
   "name": "elm-plus",
   "version": "0.1.0",
   "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "bootstrap": "yarn --frozen-lockfile && lerna bootstrap",
+    "gen": "bash ./scripts/gc.sh"
   },
   "dependencies": {
     "core-js": "^3.6.5",
@@ -28,6 +33,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^7.0.0-0",
+    "lerna": "^3.22.1",
     "lint-staged": "^9.5.0",
     "prettier": "^1.19.1",
     "sass": "^1.26.5",
